[tool.poetry]
name = "idh-tests"
version = "0.1.0"
description = ""
authors = ["Gauthier, Jacob <jacob.gauthier@intel.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pytest = "^7.4.3"
requests-oauth2client = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
